RESOLVED FIXED126560
[Mac] Fix incorrectness in use of some AppKit enums
https://bugs.webkit.org/show_bug.cgi?id=126560
Summary [Mac] Fix incorrectness in use of some AppKit enums
Mark Rowe (bdash)
Reported 2014-01-06 19:09:09 PST
There are places in DumpRenderTree and WebKitTestRunner where we work with AppKit enums incorrectly. We do a switch over NSScrollerPart but only handle one case, and we pass an integer to a function that expects NSBackingStoreType without a cast.
Attachments
Patch (4.16 KB, patch)
2014-01-06 19:13 PST, Mark Rowe (bdash)
no flags
Mark Rowe (bdash)
Comment 1 2014-01-06 19:13:36 PST
WebKit Commit Bot
Comment 2 2014-01-06 19:56:37 PST
Comment on attachment 220482 [details] Patch Clearing flags on attachment: 220482 Committed r161396: <http://trac.webkit.org/changeset/161396>
WebKit Commit Bot
Comment 3 2014-01-06 19:56:38 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.