<https://webkit.org/b/126560> Fix incorrectness in use of some AppKit enums

Reviewed by Ryosuke Niwa.

* DumpRenderTree/mac/DumpRenderTree.mm:
(-[DRTMockScroller rectForPart:]): Move to using an if with early return instead of a switch
with a single case. This avoids the potential for warnings about unhandled cases.
* WebKitTestRunner/mac/PlatformWebViewMac.mm:
(WTR::PlatformWebView::PlatformWebView): Cast the argument to NSBackingStoreType.


Canonical link: https://commits.webkit.org/144451@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161396 268f45cc-cd09-0410-ab3c-d52691b4dbfc